# claude-code-gui

./: .gitignore  CHANGELOG.md  LICENSE  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  main_backup.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ClaudeMdEditor.tsx  ContentModal.tsx  EnhancedMessageInput.tsx  FileExplorer.tsx  IDESettings.tsx  LoadingSpinner.tsx  MinimizedTerminal.tsx  PermissionDialog.tsx  ProjectList.tsx  SessionBrowser.tsx  Sidebar.tsx  SplashScreen.tsx  SystemSettings.tsx  TerminalInterface.tsx  TodoManager.tsx
src/components/CodeEditor/: EditorTabs.tsx  FileTree.tsx  MonacoEditor.tsx
src/hooks/: usePermissions.ts
