[package]
name = "claude-code-gui"
version = "0.1.0"
description = "Claude Code GUI - Beautiful interface for Claude Code CLI"
authors = ["Claude Code GUI Team"]
license = "MIT"
repository = "https://github.com/claude-code/gui"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
regex = "1.0"
lazy_static = "1.4"
portable-pty = "0.8"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
